index.css
@font-face {
    src: url("fonts/Poppins-Regular.ttf");
    font-family: "main";
}

@font-face {
    src: url("fonts/Poppins-Black.ttf");
    font-family: "titles";
}

@font-face {
    src: url("fonts/Poppins-Bold.ttf");
    font-family: "subtitle";
}

body {
    margin: 0px;
    background-color: aliceblue;
    font-family: "main", sans-serif;
}

a {
    text-decoration: none;
}

a:link{
    color: blue;
}

a:visited {
    color: blue;
}

.name {
    width: 100%;
    height: 200px;
    background: url("images/background.jpg") center / cover no-repeat !important;
    display: flex;
    align-items: center;
    justify-content: center;
    font-family: "titles";
}

.name .title {
    color: white;
    font-size: 82px;
    letter-spacing: 4px;
}

.whoiam {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-self: center;
    margin-top: 30px;
    border-style: groove;
    width: 50%;
    border-color: transparent;
    background-color: white;
    border-radius: 20px;
    padding: 20px;
}

.whoiam .text {
    width: 60%;
}

.whoiam .doggypic{
    display: flex;
    padding: 5%;
    height: 100%;
    width: 40%;;
    justify-content: center;

}


.whoiam .doggypic img{
    width: 70%;
    height: 70%;
    background-color: olivedrab;
    border-radius: 20px;
}

.whoiam .info {
    color: purple;
    font-size: xx-large;
    font-weight: bold;
    font-family: "subtitle";
}

.whoiam .brief{
    font-size: 16px;
}

.projects {
    display: flex;
    flex-direction: column;
    justify-self: center;
    background-color: white;
    width: 50%;
    margin-top: 30px;
    padding: 20px;
    border-radius: 20px;
    align-items: center;
}

.projects .projectheader {
    font-size: xx-large;
    font-family: "subtitle";
    font-weight: bold;
    color: goldenrod;
}

.projects .filter {
    padding: 10px;
}

.projects .filter .filterbutton {
    background-color: transparent;
    border-color: transparent;
    font-weight: bold;
    font-size: 18px;
    color: gray;
    font-family: "subtitle";
}

.projects .allthem {
    width: 100%;
}

.projects .allthem .allprojects{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    justify-self: center;
    width: 100%;
}

.projects .allthem .allprojects a {
    color: black;
    height: 400px;
    border-radius: 20px;
    background-color: gray;
    width: 100%;
    margin: 0px 10px;
    display: flex;
    flex-direction: column;
    align-items: center;
    opacity: .5;
    box-shadow: 3px 3px 15px black;
}

.projects .allthem .allprojects a:hover {
    opacity: 1;
    color: white
}


.projects .allthem .allprojects a .projectid {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.projects .allthem .allprojects a .projectid .projecttitle {
    display: flex;
    font-weight: bold;
    height: 20%;
    width: 100%;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
    justify-content: center;
    align-items: center;
    font-family: 'titles';
}

.projects .allthem .allprojects a .projectid .projectimage {
    width: 100%;
    height: 50%;
    object-fit: cover;
    object-position: center;
}


.projects .allthem .allprojects a .projectid .tags {
    display: grid;
    justify-content: space-between;
    justify-items: center;
    align-items: center;
    margin-left: 10%;
    margin-right: 10%;
    width: 100%;
    height: 30%;
    grid-template-columns: repeat(3, 1fr);
}

.projects .allthem .allprojects a .projectid .tags .tag {
    width: 70%;
    height: 33%;
    font-size: 12px;
    color: black;
    background-color: white;
    border-radius: 10px;
    padding: 5px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    margin-top: 5px;
    font-family: "subtitle";
}
.projects .allthem .allprojects a .projectid .tags .tag img {
    stroke: white;
    width: 50%;
    height: 100%;
    color: white;
    background-color: white;
    width: 50%;
}

.projects .allthem .allprojects a .projectid .tags .tag span {
    stroke: white;
    width: 10px;
    height: 10px;
    color: white;
    background-color: white;
    width: 50%;
}

.projects .filter .filterbutton:hover {
    cursor:pointer;
}


@media screen and (max-width: 1400px) {
    .projects .allthem .allprojects {
        flex-direction: column;
        width: 70%;
    }   

    .projects .allthem .allprojects a{
        width: 95%;
        margin-top: 20px;
    }

    .whoiam {
        flex-direction: column;
    }
    .whoiam .text {
        width: 90%;
    }

    .whoiam .img {
        width: 90%;
    }
}

@media screen and (max-width: 900px) {
    .projects {
        width: 90%;
    }
    .whoiam {
        width: 90%;
    }

    .name .title {
        font-size: 48px;
    } 
}

